feat: edit case base with user data
